Fixed clipping in tablet mode for mobile nav bar

--- a/style/navigation.css
+++ b/style/navigation.css
@@ -101,7 +101,7 @@ nav ul li a:hover {
 nav.mobile {
   position: fixed;
   top: 0;
-  top: -100%;
+  top: -300%;
   bottom: 0;
   width: 100%;
   transition: all 0.3s ease-in-out;
@@ -109,9 +109,10 @@ nav.mobile {
 nav.mobile ul {
   flex-direction: column;
   background-color: var(--primary-color);
-  height: 100%;
+  height: 90%;
   width: auto;
   margin-top: calc(var(--header-height) + 1rem);
+  overflow: auto; 
 }
 nav.mobile ul li {
   height: 2rem;
